objects/SESOC__Provider_Notification_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SESOC__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SESOC__Logging_Levels__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Logging Levels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SESOC__Logging_Provider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Logging Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SESOC__Provider_Class_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SESOC__Store_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Store Request</label>
        <type>Checkbox</type>
    </fields>
    <label>SESOC - Provider Notification Settings</label>
</CustomObject>